--- a/NOTIFICATION/application/controllers/index.html
+++ b/NOTIFICATION/application/controllers/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<p>Directory access is forbidden. uuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuu</p>
+<p>Directory access is forbidden.</p>
 
 </body>
 </html>
